# superpathlib

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  mypy.ini  plib.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  spathlib.py
.github/workflows/: build.yml
config/: bumpversion.cfg
plib/: __init__.py  base.py  common_folders.py  content_properties.py  encryption.py  extra_functionality.py  metadata_properties.py  override.py  plib.py  tags.py  utils.py
src/superpathlib/: base.py  cached_content.py  common_folders.py  content_properties.py  encryption.py  extra_functionality.py  metadata_properties.py  override.py  tags.py  utils.py
src/superpathlib/cli/: entry_point.py
src/superpathlib/context/: context.py
src/superpathlib/main/: main.py
test/: contextmanagertest.py  test.py  yaml_test.py
tests/: conftest.py  content.py  test_api.py  test_cached_content.py  test_common_folders.py  test_content.py  test_encrypted_content.py  test_functionality.py  test_inheritance.py  test_metadata.py  test_yaml.py  untest_content.py  utils.py
