[project]
name = "superpathlib"
version = "2.0.3"
description = "Extended Pathlib"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "simple-classproperty >=4.0.2, <5",
]

[project.optional-dependencies]
full = [
    "dirhash >=0.2.1, <1",
    "numpy >=1.26.4, <2",
    "package-utils >=0.6.1, <1",
    "PyYaml >=6.0.1, <7",
    "xattr >=0.10.1, <2",
]
dev = [
    "hypothesis >=6.97.1, <7",
    "package-dev-tools >=0.5.12, <1",

    # types
    "types-PyYaml >=6.0.12.12, <7",

    # full
    "dirhash >=0.2.1, <1",
    "numpy >=1.26.4, <2",
    "package-utils >=0.6.1, <1",
    "PyYaml >=6.0.1, <7",
    "xattr >=0.10.1, <2",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/superpathlib"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "dirhash.*",
    "xattr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
superpathlib = ["py.typed"]
