[project]
name = "superpathlib"
version = "2.0.12"
description = "Extended Pathlib"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "simple-classproperty >=4.0.2, <5",
    "typing_extensions >=4.0, <5",
]

[project.optional-dependencies]
full = [
    "dirhash >=0.2.1, <1",
    "numpy >=1.26.4, <3",
    "package-utils >=0.8.1, <1",
    "PyYaml >=6.0.1, <7",
    "xattr >=0.10.1, <2",
]
dev = [
    "hypothesis >=6.97.1, <7",
    "package-dev-tools >=0.8.0, <1",

    # types
    "types-PyYaml >=6.0.12.12, <7",

    # full
    "dirhash >=0.2.1, <1",
    "numpy >=1.26.4, <3",
    "package-utils >=0.8.0, <1",
    "PyYaml >=6.0.1, <7",
    "xattr >=0.10.1, <2",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/superpathlib"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "dirhash.*",
    "xattr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # annotated with Any
    "D1",       # missing docstrings
    "D200",     # one-line docstring
    "D203",     # conflicts with D211
    "D205",     # blank line between summary and description
    "D212",     # conflicts with D213
    "D401",     # imperative first line
    "G004",     # logging f-string
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401"  # unused import
]
"tests/*" = [
    "S101",  # assert used
]
"src/superpathlib/cached_content.py" = [
    "PLC0415",  # lazy imports for optional dependency
]
"src/superpathlib/content_properties.py" = [
    "PLC0415",  # lazy imports for optional dependencies
]
"src/superpathlib/extra_functionality.py" = [
    "PLC0415",  # lazy imports for optional dependencies
]
"src/superpathlib/metadata_properties.py" = [
    "PLC0415",  # lazy imports for optional dependencies
]

[tool.setuptools.package-data]
superpathlib = ["py.typed"]
