[metadata]
name = superpathlib
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = extended pathlib
description-file = README.md 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quintenroets/superpathlib
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
package_dir =
    = .
install_requires =
    PyYAML

[options.packages.find]
where = .

[bdist_wheel]
universal = true
